# AudioRepoDigest

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: weekly-digest.yml
src/audiorepodigest/: __init__.py  __main__.py  classification.py  cli.py  config.py  discovery.py  emailer.py  forecasting.py  github_client.py  logging.py  models.py  pipeline.py  ranking.py  reporting.py  trends.py
src/audiorepodigest/templates/: digest_email.html.j2  digest_email.txt.j2
src/audiorepodigest/utils/: __init__.py  dates.py
tests/: __init__.py  conftest.py  test_classification.py  test_config.py  test_emailer.py  test_forecasting.py  test_ranking.py  test_reporting.py  test_trends.py
